# bbopt

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: python-package.yml  python-publish.yml
black_box_opt/: ComputeRBF.py  InitialRBFMatrices.py  LocalStochRBFrestart.py  LocalStochRBFstop.py  Minimize_Merit_Function.py  SLHDstandard.py  StochasticRBF.py  TestLocalStochRBFrestart.py  datainput_Branin.py  datainput_hartman3.py  datainput_rastrigin.py  phi.py  utility.py
blackboxopt/: ComputeRBF.py  InitialRBFMatrices.py  LocalStochRBFrestart.py  LocalStochRBFstop.py  Minimize_Merit_Function.py  SLHDstandard.py  TestLocalStochRBFrestart.py  __init__.py  acquisition.py  gp.py  optimize.py  phi.py  problem.py  rbf.py  rbf_kernel.py  sampling.py  utility.py
blackboxoptim/: __init__.py  acquisition.py  gp.py  optimize.py  problem.py  rbf.py  sampling.py
docs/: acquisition.rst  blackboxopt.rst  conf.py  gp.rst  index.rst  modules.rst  optimize.rst  problem.rst  rbf.rst  requirements.txt  sampling.rst  tests.rst  tests.ssurjano_benchmark.rst  tests.vlse_benchmark.rst
examples/: LocalStochRBFstop.py  README.md  StochasticRBF.py  compareLearningStrategies.py  data.py  datainput_Branin.py  datainput_BraninWithInteger.py  datainput_hartman3.py  datainput_rastrigin.py  dycors.py  example_gosac_1.py  example_gosac_2.py  optimization.ipynb  optprogram1.py  pareto_front.ipynb  sampling.ipynb  socemo.ipynb  test_gosac_2.py
examples/multiobj/: pareto_front.ipynb  socemo.ipynb
examples/opt_with_constr/: example_gosac_1.py  example_gosac_2.py
examples/single_obj_rbf/: LocalStochRBFstop.py  compareLearningStrategies.py  data.py  datainput_Branin.py  datainput_BraninWithInteger.py  datainput_hartman3.py  datainput_rastrigin.py  optprogram1.py
examples/vlse_benchmark/: benchmark.py  vlse_bench.ipynb  vlse_bench.py  vlse_bench_run.sh  vlse_bench_run_test1.py  vlse_bench_run_test2.py
juli/: ComputeRBF.py  InitialRBFMatrices.py  LocalStochRBFrestart.py  LocalStochRBFstop.py  Minimize_Merit_Function.py  SLHDstandard.py  StochasticRBF.py  TestLocalStochRBFrestart.py  datainput_Branin.py  datainput_hartman3.py  datainput_rastrigin.py  phi.py  utility.py
tests/: _test_gosac_bench.py  gosac_benchmark.py  ssurjano_bench_plot.ipynb  test_acquisition.py  test_gosac_bench.py  test_gp.py  test_optimize.py  test_rbf.py  test_sampling.py  test_ssurjano_bench.py  test_utils.py  test_vlse_bench.py  vlse_bench_dispatch.py  vlse_bench_dispatch_bounds.py  vlse_bench_plot.ipynb  vlse_bench_plot.py
tests/ssurjano_benchmark/: __init__.py  ackley.py  beale.py  beale.r  boha1.py  boha2.py  boha3.py  boha3.r  booth.py  borehole.py  boreholelc.py  branin.py  braninmodif.py  braninsc.py  braninsc.r  bratleyetal92.py  bukin6.py  camel3.py  camel6.py  camel6.r  canti.py  chsan10.py  colville.py  cont.py  cont.r  copeak.py  crossit.py  crossit.r  curretal88exp.py  curretal88explc.py  curretal88sin.py  curretal88sin.r  curretal88sur.py  curretal88sur.r  curretal91.py  dejong5.py  dejong5.r  detpep108d.py  detpep108d.r  detpep10curv.py  (+158 more)
tests/vlse_benchmark/: __init__.py  boha1.r  boha2.r  booth.r  borehole.r  boreholelc.r  branin.r  braninmodif.r  bratleyetal92.r  bukin6.r  camel3.r  canti.r  chsan10.r  colville.r  copeak.r  curretal88exp.r  curretal88explc.r  curretal91.r  detpep10curv.r  dixonpr.r  easom.r  eldetal07ratio.r  find_nargs.ipynb  forretal08.r  gaussian.r  hart6sc.r  hig02grlee08.r  holsetal13log.r  langer.r  levy.r  limetal02non.r  limetal02pol.r  linketal06nosig.r  linketal06simple.r  linketal06sin.r  loepetal13.r  matya.r  michal.r  moon10hd.r  moon10hdc1.r  (+26 more)
