[project]
name = "blackboxopt"
version = "0.4.2"
description = "Surrogate models and active learning for scientific applications"
authors = [
    {name = "Weslley da Silva Pereira", email = "weslley.dasilvapereira@nrel.gov"},
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.22.4,<2.0.0",
    "scipy>=1.11.4",
    "pymoo>=0.6.1.1",
    "scikit-learn>=1.5.2",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.4.3",
    "rpy2==3.5.1",
]
lint = [
    "ruff>=0.3.5",
]
doc = [
    "sphinx>=7.2.6",
    "sphinx-rtd-theme>=2.0.0",
    "sphinx-autodoc-typehints>=2.3.0",
]
example = [
    "jupyter>=1.0.0",
    "matplotlib>=3.8.2",
    "snakeviz>=2.2.0",
]

[tool.pdm.build]
includes = ["blackboxopt/*.py"]
source-includes = [
    "tests/test_*.py",
    "**/__init__.py",
    "tests/vlse_benchmark/**.r",
    "tests/gosac_benchmark.py"
]
source-excludes = ["tests/**"]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "W"]
ignore = []

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 60

[tool.ruff.lint.pycodestyle]
max-doc-length = 80